# wasmduck

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md
.cargo/: config
.github/workflows/: rust.yml
deploy/: index.html  serve.py
docker/: Dockerfile
src/: dto.rs  grid.rs  kernels.rs  lib.rs  main.rs  main_backend.rs  main_wasm.rs  main_x86.rs  math.rs  sph.rs
static/: index.html
util/kernel_math/: kernels.py  requirements.txt
