[package]
name = "wasmduck"
version = "0.1.0"
authors = ["Magnus Sandén <thefreid@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "*"
nom = "5"
nalgebra = "0.21.0"
stdweb = { version = "*", optional = true }
webgl_stdweb = { version = "*", optional = true }
termion = { version = "*", optional = true }
rayon = { version = "*", optional = true }
image = { version = "*", optional = true }

[features]
x86 = ["termion", "rayon", "image"]
wasm = ["stdweb", "webgl_stdweb", "rayon"]

[[bin]]
name = "x86"
path = "src/main_x86.rs"
required-features = ["x86"]

[[bin]]
name = "wasm"
path = "src/main_wasm.rs"
required-features = ["wasm"]
